sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:17: error: illegal start of simple expression
  } while ()
           ^AlgCocktailSort1:18: error: ')' expected but '}' found.
} 
^