sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var comptEchange = 0
  var n = getNombreValeurs()
  do {
    for (i <- 0 to n-2){
      if (getValeur(i)>getValeur(i+1)){
        echange (i,i+1)
      }
    }
    for (i <- n-2 to 0){
      if (getValeur(i)>getValeur(i+1)){
        echange (i,i+1)
      }
    }
    
  } while ()
}